Add routes to get players
