# docs/openapi.yaml
@@ -33,6 +33,43 @@ paths:
         500:
           description: Sever error
           content: {}
+    get:
+      tags:
+      - players
+      summary: Get player list
+      operationId: getPlayers
+      responses:
+        200:
+          description: Return player list
+          content: {}
+        404:
+          description: Players not found
+          content: {}
+        500:
+          description: Server error
+          content: {}
+  /players/{playerId}:
+    get:
+      tags:
+      - players
+      summary: Get a player
+      operationId: getPlayerById
+      parameters:
+        - in: path
+          name: playerId
+          schema:
+            type: integer
+          required: true
+      responses:
+        200:
+          description: Return player object
+          content: {}
+        404:
+          description: Player not found
+          content: {}
+        500:
+          description: Server error
+          content: {}
   /transactions:
     post:
       tags:
@@ -79,6 +116,8 @@ paths:
           content: {}
         400:
           description: Bad request, marketId (int) OR playerId (int) are required
+          content: {}
+        404:
           content: {}
         500:
           description: Server error
